# Ada_SPARK_on_ESP32C3_Demo

./: README.md
ada_code/: ada_code.gpr  alire.toml
ada_code/src/: ada_code.adb  ada_code.ads
esp32c3_https_server/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp32c3_https_server/main/: hardware_abstraction.h  main.c
